# TTG

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
src/: main  main.cpp
src/logic/: DiceRoller.cpp  DiceRoller.hpp  RNG.cpp  RNG.hpp
src/runtime/: Clock.cpp  Clock.hpp  DebugOut.cpp  DebugOut.hpp  Heartbeat.cpp  Heartbeat.hpp  Wait.cpp  Wait.h  heartbeat.cpp  heartbeat.hpp
